--- a/sort-page.html
+++ b/sort-page.html
@@ -70,6 +70,7 @@ img{display:block;height:100%;width:100%}
 		mui.plusReady(function(){
 			if (oIndexList==null){
 				web.qs('#brand').style.height =  plus.screen.resolutionHeight-plus.navigator.getStatusbarHeight()-74 + 'px';
+				web.qs('#sort').style.height =  plus.screen.resolutionHeight-plus.navigator.getStatusbarHeight()-74 + 'px';
 				oIndexList = new mui.IndexedList(web.qs('#brand'));
 			}
 		});
