--- a/user-improve-info.html
+++ b/user-improve-info.html
@@ -40,7 +40,7 @@
 					<h3>仓库信息</h3>
 					<h4 id='shopBase' class='forsubmit' data-name='shopBase'>请选择</h4>
 				</li>
-				<li class='nav write-value pz-multi-line'>
+				<li class='nav write-value pz-multi-line' style='display:none'>
 					<h3>详细地址</h3>
 					<h4 id='shopDesc' class='forsubmit' data-name='shopDesc'>填写地址</h4>
 				</li>
