--- a/user-sell.html
+++ b/user-sell.html
@@ -326,7 +326,9 @@ body,html{height:100%;width: 100%;}
 		/*联系买家*/
 		mui('.mui-scroll').on('tap','.car-item .contact-buyer',function(){
 			var _this=this,contianer=this.parentNode.parentNode;
-			contactBuyer.querySelector('.sure').href=_this.dataset.tel
+			oMask.callback=function(){
+				plus.device.dial(_this.dataset.tel)
+			}
 			oMask.create().append(contactBuyer);
 		})
 		/*提醒买家收货*/
